--- a/StepTrackerAndroidApp/app/src/main/res/layout/activity_trang_chu.xml
+++ b/StepTrackerAndroidApp/app/src/main/res/layout/activity_trang_chu.xml
@@ -8,7 +8,6 @@
     android:orientation="vertical"
     tools:context=".TrangChu">
 
-
     <TextView
         android:id="@+id/tv_thoigian"
         android:layout_width="wrap_content"
@@ -17,7 +16,7 @@
         android:layout_marginTop="35dp"
         android:text="Thời gian"
         android:textColor="@color/white"
-        android:textSize="25dp"
+        android:textSize="20dp"
         android:textStyle="bold" />
 
     <ImageView
@@ -34,25 +33,37 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="220dp"
-        android:text="22.0"
+        android:text="0.0"
         android:textColor="@color/white"
         android:textSize="30dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
-    <Button
-        android:id="@+id/btn_bat_dau"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
-        android:layout_below="@+id/img_circle_yellow"
-        android:layout_centerHorizontal="true"
-        android:backgroundTint="@color/blue_for_button"
-        android:text="Bắt đầu"/>
+<!--    <Button-->
+<!--        android:id="@+id/btn_bat_dau"-->
+<!--        android:layout_width="160dp"-->
+<!--        android:layout_height="60dp"-->
+<!--        android:layout_below="@+id/img_circle_yellow"-->
+<!--        android:layout_centerHorizontal="true"-->
+<!--        android:backgroundTint="@color/blue_for_button"-->
+<!--        android:text="Bắt đầu"/>-->
 
-    <com.google.android.material.bottomnavigation.BottomNavigationView
-        android:id="@+id/bottom_nav"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:layout_alignParentBottom="true"
-        app:menu="@menu/menu_bottom_nav"/>
+<!--    <com.google.android.material.bottomappbar.BottomAppBar-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:layout_alignParentBottom="true"-->
+<!--        android:layout_marginBottom="2dp"-->
+<!--        tools:ignore="BottomAppBar">-->
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottom_nav"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_alignParentBottom="true"
+            app:itemBackground="@color/blue_for_button"
+            app:itemIconTint="@color/custom_color_bottom_nav"
+            app:itemTextColor="@color/white"
+            app:menu="@menu/menu_bottom_nav"/>
+<!--    </com.google.android.material.bottomappbar.BottomAppBar>-->
+
 
 </RelativeLayout>
