--- a/StepTrackerAndroidApp/app/src/main/res/values/colors.xml
+++ b/StepTrackerAndroidApp/app/src/main/res/values/colors.xml
@@ -9,4 +9,8 @@
     <color name="white">#FFFFFFFF</color>
     <color name="green_for_button">#2ed059</color>
     <color name="blue_for_button">#0c84fe</color>
+    <color name="yellow">#fff70f</color>
+    <color name="orange">#F25C05</color>
+    <color name="red">#ff0000</color>
+
 </resources>
