--- a/StepTrackerAndroidApp/app/src/main/res/layout/activity_tao_tai_khoan.xml
+++ b/StepTrackerAndroidApp/app/src/main/res/layout/activity_tao_tai_khoan.xml
@@ -1,190 +1,197 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/tao_tai_khoan_background"
     tools:context=".TaoTaiKhoan">
 
-    <TextView
-        android:id="@+id/tv_taotaikhoan"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="30dp"
-        android:gravity="center"
-        android:text="Tạo tài khoản"
-        android:textColor="@color/white"
-        android:textSize="25dp"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:background="@drawable/tao_tai_khoan_background">
+        <TextView
+            android:id="@+id/tv_taotaikhoan"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="40dp"
+            android:layout_marginBottom="30dp"
+            android:gravity="center"
+            android:text="Tạo tài khoản"
+            android:textColor="@color/white"
+            android:textSize="25dp"
+            android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/edt_hovaten"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_taotaikhoan"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/edittext_format"
-        android:backgroundTint="#30ffffff"
-        android:drawablePadding="20dp"
-        android:hint="Họ và tên"
-        android:padding="15dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="15dp" />
+        <EditText
+            android:id="@+id/edt_hovaten"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/tv_taotaikhoan"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/edittext_format"
+            android:backgroundTint="#30ffffff"
+            android:drawablePadding="20dp"
+            android:hint="Họ và tên"
+            android:padding="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="15dp" />
 
-    <EditText
-        android:id="@+id/edt_sdt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edt_ngaysinh"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/edittext_format"
-        android:backgroundTint="#30ffffff"
-        android:drawablePadding="20dp"
-        android:hint="Số điện thoại"
-        android:padding="15dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="15dp" />
+        <EditText
+            android:id="@+id/edt_sdt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/edt_ngaysinh"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/edittext_format"
+            android:backgroundTint="#30ffffff"
+            android:drawablePadding="20dp"
+            android:hint="Số điện thoại"
+            android:padding="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="15dp" />
 
-    <EditText
-        android:id="@+id/edt_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edt_sdt"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/edittext_format"
-        android:backgroundTint="#30ffffff"
-        android:drawablePadding="20dp"
-        android:hint="Email"
-        android:padding="15dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="15dp" />
+        <EditText
+            android:id="@+id/edt_email"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/edt_sdt"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/edittext_format"
+            android:backgroundTint="#30ffffff"
+            android:drawablePadding="20dp"
+            android:hint="Email"
+            android:padding="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="15dp" />
 
-    <EditText
-        android:id="@+id/edt_ngaysinh"
-        android:layout_width="240dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edt_hovaten"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/edittext_format"
-        android:backgroundTint="#30ffffff"
-        android:drawablePadding="20dp"
-        android:hint="Ngày sinh"
-        android:padding="15dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="15dp" />
+        <EditText
+            android:id="@+id/edt_ngaysinh"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/edt_hovaten"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/edittext_format"
+            android:backgroundTint="#30ffffff"
+            android:drawablePadding="20dp"
+            android:hint="Ngày sinh"
+            android:padding="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="15dp" />
 
-    <Button
-        android:id="@+id/btn_chon_ngay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edt_hovaten"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="18dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:layout_toRightOf="@+id/edt_ngaysinh"
-        android:backgroundTint="@color/blue_for_button"
-        android:drawablePadding="20dp"
-        android:text="Chọn ngày"
-        android:textSize="14dp" />
+        <Button
+            android:id="@+id/btn_chon_ngay"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/edt_hovaten"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="18dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:layout_toRightOf="@+id/edt_ngaysinh"
+            android:backgroundTint="@color/blue_for_button"
+            android:drawablePadding="20dp"
+            android:text="Chọn ngày"
+            android:textSize="14dp" />
 
-    <EditText
-        android:id="@+id/edt_tendangnhap"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edt_email"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/edittext_format"
-        android:backgroundTint="#30ffffff"
-        android:drawableLeft="@drawable/ic_baseline_person_24"
-        android:drawablePadding="20dp"
-        android:hint="Tên đăng nhập"
-        android:padding="15dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="15dp" />
+        <EditText
+            android:id="@+id/edt_tendangnhap"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/edt_email"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/edittext_format"
+            android:backgroundTint="#30ffffff"
+            android:drawableLeft="@drawable/ic_baseline_person_24"
+            android:drawablePadding="20dp"
+            android:hint="Tên đăng nhập"
+            android:padding="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="15dp" />
 
-    <EditText
-        android:id="@+id/edt_matkhau"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edt_tendangnhap"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/edittext_format"
-        android:backgroundTint="#30ffffff"
-        android:drawableLeft="@drawable/ic_baseline_info_24"
-        android:drawablePadding="20dp"
-        android:hint="Mật khẩu"
-        android:inputType="textPassword"
-        android:padding="15dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="15dp" />
+        <EditText
+            android:id="@+id/edt_matkhau"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/edt_tendangnhap"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/edittext_format"
+            android:backgroundTint="#30ffffff"
+            android:drawableLeft="@drawable/ic_baseline_info_24"
+            android:drawablePadding="20dp"
+            android:hint="Mật khẩu"
+            android:inputType="textPassword"
+            android:padding="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="15dp" />
 
-    <EditText
-        android:id="@+id/edt_xacnhanmatkhau"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/edt_matkhau"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp"
-        android:background="@drawable/edittext_format"
-        android:backgroundTint="#30ffffff"
-        android:drawableLeft="@drawable/ic_baseline_info_24"
-        android:drawablePadding="20dp"
-        android:hint="Xác nhận mật khẩu"
-        android:inputType="textPassword"
-        android:padding="15dp"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:textSize="15dp" />
+        <EditText
+            android:id="@+id/edt_xacnhanmatkhau"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/edt_matkhau"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="10dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/edittext_format"
+            android:backgroundTint="#30ffffff"
+            android:drawableLeft="@drawable/ic_baseline_info_24"
+            android:drawablePadding="20dp"
+            android:hint="Xác nhận mật khẩu"
+            android:inputType="textPassword"
+            android:padding="15dp"
+            android:textColor="@color/white"
+            android:textColorHint="@color/white"
+            android:textSize="15dp" />
 
-    <Button
-        android:id="@+id/btn_tao_moi"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
-        android:layout_below="@+id/edt_xacnhanmatkhau"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="30dp"
-        android:backgroundTint="@color/green_for_button"
-        android:text="Tạo tài khoản"
-        android:textSize="14dp"/>
+        <Button
+            android:id="@+id/btn_tao_moi"
+            android:layout_width="160dp"
+            android:layout_height="60dp"
+            android:layout_below="@+id/edt_xacnhanmatkhau"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="30dp"
+            android:backgroundTint="@color/green_for_button"
+            android:text="Tạo tài khoản"
+            android:textSize="14dp"/>
 
-    <Button
-        android:id="@+id/btn_dang_nhap_bang_tai_khoan_da_co"
-        android:layout_width="160dp"
-        android:layout_height="60dp"
-        android:layout_below="@+id/btn_tao_moi"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="@color/blue_for_button"
-        android:text="Đăng nhập"
-        android:textSize="14dp"/>
-</RelativeLayout>
+        <Button
+            android:id="@+id/btn_dang_nhap_bang_tai_khoan_da_co"
+            android:layout_width="160dp"
+            android:layout_height="60dp"
+            android:layout_below="@+id/btn_tao_moi"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="10dp"
+            android:backgroundTint="@color/blue_for_button"
+            android:text="Đăng nhập"
+            android:textSize="14dp"/>
+
+    </RelativeLayout>
+
+
+</ScrollView>
