fixDK_DN_MenuBottom

--- a/StepTrackerAndroidApp/app/src/main/res/layout/activity_tao_tai_khoan.xml
+++ b/StepTrackerAndroidApp/app/src/main/res/layout/activity_tao_tai_khoan.xml
@@ -3,14 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".TaoTaiKhoan">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        android:background="@drawable/tao_tai_khoan_background">
+        android:layout_height="wrap_content"
+        android:background="@drawable/tao_tai_khoan_background"
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/tv_taotaikhoan"
             android:layout_width="match_parent"
@@ -178,7 +179,7 @@
             android:layout_marginTop="30dp"
             android:backgroundTint="@color/green_for_button"
             android:text="Tạo tài khoản"
-            android:textSize="14dp"/>
+            android:textSize="14dp" />
 
         <Button
             android:id="@+id/btn_dang_nhap_bang_tai_khoan_da_co"
@@ -189,9 +190,6 @@
             android:layout_marginTop="10dp"
             android:backgroundTint="@color/blue_for_button"
             android:text="Đăng nhập"
-            android:textSize="14dp"/>
-
+            android:textSize="14dp" />
     </RelativeLayout>
-
-
 </ScrollView>
