updateBMI_NguoiDung_BaoCao

--- a/StepTrackerAndroidApp/app/src/main/res/layout/activity_tao_tai_khoan.xml
+++ b/StepTrackerAndroidApp/app/src/main/res/layout/activity_tao_tai_khoan.xml
@@ -48,13 +48,14 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/edt_ngaysinh"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/edittext_format"
             android:backgroundTint="#30ffffff"
             android:drawablePadding="20dp"
             android:hint="Số điện thoại"
+            android:inputType="number"
             android:padding="15dp"
             android:textColor="@color/white"
             android:textColorHint="@color/white"
@@ -66,7 +67,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/edt_sdt"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/edittext_format"
@@ -84,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/edt_hovaten"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/edittext_format"
@@ -102,14 +103,14 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/edt_hovaten"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="18dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:layout_toRightOf="@+id/edt_ngaysinh"
             android:backgroundTint="@color/blue_for_button"
             android:drawablePadding="20dp"
             android:text="Chọn ngày"
-            android:textSize="14dp" />
+            android:textSize="12dp" />
 
         <EditText
             android:id="@+id/edt_tendangnhap"
@@ -117,7 +118,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/edt_email"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/edittext_format"
@@ -136,7 +137,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/edt_tendangnhap"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/edittext_format"
@@ -156,7 +157,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/edt_matkhau"
             android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="5dp"
             android:layout_marginEnd="10dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/edittext_format"
@@ -176,7 +177,7 @@
             android:layout_height="60dp"
             android:layout_below="@+id/edt_xacnhanmatkhau"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:backgroundTint="@color/green_for_button"
             android:text="Tạo tài khoản"
             android:textSize="14dp" />
