--- a/StepTrackerAndroidApp/app/src/main/res/layout/activity_chinh_sua_nguoi_dung.xml
+++ b/StepTrackerAndroidApp/app/src/main/res/layout/activity_chinh_sua_nguoi_dung.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".FR_TrangChiSo">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:id="@+id/activity_chinh_sua_nguoi_dung"
+    tools:context=".ChinhSuaNguoiDung">
 
     <ImageView
         android:id="@+id/img_tieude"
@@ -12,143 +14,149 @@
         android:background="@drawable/trang_chu_background_light" />
 
     <TextView
-        android:id="@+id/tv_chiso"
+        android:id="@+id/tv_chitiet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="110dp"
         android:layout_marginBottom="30dp"
         android:gravity="center"
-        android:text="Các chỉ số sức khỏe"
+        android:text="Chi tiết thông tin"
         android:textColor="#009688"
         android:textSize="25dp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/tv_chieucao"
+        android:id="@+id/tv_hovaten"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/img_tieude"
         android:layout_centerVertical="true"
         android:layout_marginTop="10dp"
         android:padding="15dp"
-        android:text="Chiều cao:"
+        android:text="Họ và tên:"
         android:textColor="@color/black"
         android:textSize="15dp" />
 
     <EditText
-        android:id="@+id/edt_chieucao"
-        android:layout_width="150dp"
+        android:id="@+id/edt_hovaten"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/img_tieude"
         android:layout_marginStart="10dp"
-        android:layout_marginLeft="11dp"
         android:layout_marginTop="10dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_toRightOf="@+id/tv_chieucao"
+        android:layout_toRightOf="@+id/tv_hovaten"
         android:background="@drawable/edittext2_format"
-        android:drawableLeft="@drawable/ic_baseline_accessibility_new_24"
         android:drawablePadding="20dp"
-        android:inputType="numberDecimal"
         android:padding="15dp"
-        android:textAlignment="center"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="15dp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/tv_cm"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/img_tieude"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="10dp"
-        android:layout_toRightOf="@+id/edt_chieucao"
-        android:padding="15dp"
-        android:text="(cm)"
-        android:textColor="@color/black"
-        android:textSize="15dp" />
-
-    <TextView
-        android:id="@+id/tv_cannang"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_chieucao"
-        android:layout_centerVertical="true"
-        android:layout_marginTop="22dp"
-        android:padding="15dp"
-        android:text="Cân nặng:"
-        android:textColor="@color/black"
-        android:textSize="15dp" />
-
     <EditText
-        android:id="@+id/edt_cannang"
-        android:layout_width="150dp"
+        android:id="@+id/edt_ngaysinh"
+        android:layout_width="240dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/edt_chieucao"
+        android:layout_below="@+id/edt_hovaten"
         android:layout_marginStart="10dp"
         android:layout_marginTop="5dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
-        android:layout_toRightOf="@+id/tv_chieucao"
         android:background="@drawable/edittext2_format"
-        android:drawableLeft="@drawable/ic_baseline_browse_gallery_24"
         android:drawablePadding="20dp"
-        android:inputType="numberDecimal"
         android:padding="15dp"
-        android:textAlignment="center"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:textSize="15dp"
+        android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/btn_chon_ngay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/edt_hovaten"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_toRightOf="@+id/edt_ngaysinh"
+        android:backgroundTint="@color/blue_for_button"
+        android:drawablePadding="20dp"
+        android:text="Chọn ngày"
+        android:textSize="12dp" />
+
+    <TextView
+        android:id="@+id/tv_sdt"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/edt_ngaysinh"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="5dp"
+        android:padding="15dp"
+        android:text="Số điện thoại:"
+        android:textColor="@color/black"
+        android:textSize="15dp" />
+
+    <EditText
+        android:id="@+id/edt_sdt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/edt_ngaysinh"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_toRightOf="@+id/tv_sdt"
+        android:background="@drawable/edittext2_format"
+        android:drawablePadding="20dp"
+        android:inputType="number"
+        android:padding="15dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
         android:textSize="15dp"
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/tv_kg"
+        android:id="@+id/tv_email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_cm"
+        android:layout_below="@+id/tv_sdt"
         android:layout_centerVertical="true"
-        android:layout_marginTop="24dp"
-        android:layout_toRightOf="@+id/edt_cannang"
-        android:inputType="numberDecimal"
+        android:layout_marginTop="16dp"
         android:padding="15dp"
-        android:text="(kg)"
+        android:text="Email:"
         android:textColor="@color/black"
         android:textSize="15dp" />
 
+    <EditText
+        android:id="@+id/edt_email"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/edt_sdt"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_toRightOf="@+id/tv_email"
+        android:background="@drawable/edittext2_format"
+        android:drawablePadding="20dp"
+        android:padding="15dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:textSize="15dp"
+        android:textStyle="bold" />
+
     <Button
-        android:id="@+id/btn_luu"
-        android:layout_width="100dp"
+        android:id="@+id/btn_cap_nhat"
+        android:layout_width="150dp"
         android:layout_height="60dp"
-        android:layout_below="@+id/edt_cannang"
+        android:layout_below="@+id/edt_email"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:backgroundTint="@color/green_for_button"
-        android:text="Lưu"
+        android:text="Cập nhật"
         android:textSize="15dp" />
 
-    <TextView
-        android:id="@+id/tv_bmi"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_luu"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:text=""
-        android:textColor="@color/purple_500"
-        android:textSize="20dp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/tv_nhanxet"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tv_bmi"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:text=""
-        android:textColor="@color/black"
-        android:textSize="15dp"
-        android:textStyle="bold" />
 </RelativeLayout>
