--- a/StepTrackerAndroidApp/app/src/main/res/layout/activity_main.xml
+++ b/StepTrackerAndroidApp/app/src/main/res/layout/activity_main.xml
@@ -12,21 +12,22 @@
         android:id="@+id/tv_dangnhap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="125dp"
         android:layout_marginBottom="50dp"
         android:gravity="center"
         android:text="Đăng nhập"
         android:textColor="@color/white"
         android:textSize="25dp"
-        android:textStyle="bold"/>
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/edt_tendangnhap"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/tv_dangnhap"
-        android:layout_margin="10dp"
-        android:layout_marginTop="60dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/edittext_format"
         android:backgroundTint="#30ffffff"
@@ -44,7 +45,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/edt_tendangnhap"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="@drawable/edittext_format"
@@ -56,7 +57,7 @@
         android:padding="18dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white"
-        android:textSize="15dp"/>
+        android:textSize="15dp" />
 
     <Button
         android:id="@+id/btn_batdau"
