--- a/StepTrackerAndroidApp/app/src/main/res/layout/activity_main_menu_bottom_fragment.xml
+++ b/StepTrackerAndroidApp/app/src/main/res/layout/activity_main_menu_bottom_fragment.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="50dp"
         android:layout_alignParentBottom="true"
-        app:itemBackground="@color/blue_for_button"
+        app:itemBackground="@color/purple_500"
         app:itemIconTint="@color/custom_color_bottom_nav"
         app:itemTextColor="@color/white"
         app:menu="@menu/menu_bottom_nav"/>
