--- a/StepTrackerAndroidApp/app/src/main/res/layout/fragment_f_r__trang_chu.xml
+++ b/StepTrackerAndroidApp/app/src/main/res/layout/fragment_f_r__trang_chu.xml
@@ -3,9 +3,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/trang_chu_background_light"
     android:orientation="vertical"
     tools:context=".FR_TrangChu">
+
+    <ImageView
+        android:id="@+id/img_tieude"
+        android:layout_width="match_parent"
+        android:layout_height="480dp"
+        android:background="@drawable/trang_chu_background_light" />
+
 
     <TextView
         android:id="@+id/tv_thoigian"
@@ -23,7 +29,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="90dp"
+        android:layout_marginTop="70dp"
         android:src="@drawable/circle_yellow" />
 
     <TextView
@@ -31,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="180dp"
         android:text="0"
         android:textColor="@color/white"
         android:textSize="30dp"
@@ -47,6 +53,106 @@
         android:textColor="@color/white"
         android:textSize="30dp"
         android:textStyle="bold" />
+
+    <Button
+        android:id="@+id/btn_luu"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:layout_below="@+id/img_circle_yellow"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:backgroundTint="@color/green_for_button"
+        android:text="Lưu" />
+
+
+    <TextView
+        android:id="@+id/tv_quangduong"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_luu"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="155dp"
+        android:layout_marginTop="70dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_toRightOf="@+id/img_distance_icon"
+        android:background="@drawable/edittext_format"
+        android:backgroundTint="@color/blue_for_button"
+        android:drawablePadding="20dp"
+        android:padding="15dp"
+        android:text="0"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="15dp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tv_km"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_luu"
+        android:layout_centerVertical="true"
+        android:layout_marginTop="70dp"
+        android:layout_toRightOf="@+id/tv_quangduong"
+        android:padding="15dp"
+        android:text="(km)"
+        android:textColor="@color/black"
+        android:textSize="15dp" />
+
+    <ImageView
+        android:id="@+id/img_distance_icon"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_below="@id/btn_luu"
+        android:layout_marginLeft="100dp"
+        android:layout_marginTop="70dp"
+        android:padding="6dp"
+        android:src="@drawable/distance_icon" />
+
+    <TextView
+        android:id="@+id/tv_kcal"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/img_distance_icon"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginLeft="155dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:layout_toRightOf="@+id/img_kcal_icon"
+        android:background="@drawable/edittext_format"
+        android:backgroundTint="@color/blue_for_button"
+        android:drawablePadding="20dp"
+        android:padding="15dp"
+        android:text="0"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="15dp"
+        android:textStyle="bold" />
+
+    <ImageView
+        android:id="@+id/img_kcal_icon"
+        android:layout_width="60dp"
+        android:layout_height="50dp"
+        android:layout_below="@id/img_distance_icon"
+        android:layout_marginLeft="100dp"
+        android:padding="6dp"
+        android:src="@drawable/kcal_icon" />
+
+    <TextView
+        android:id="@+id/tv_donvi_kcal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_quangduong"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/tv_quangduong"
+        android:padding="15dp"
+        android:text="(kcal)"
+        android:textColor="@color/black"
+        android:textSize="15dp" />
 
 
 </RelativeLayout>
