--- a/StepTrackerAndroidApp/app/src/main/res/layout/fragment_f_r__trang_nguoi_dung.xml
+++ b/StepTrackerAndroidApp/app/src/main/res/layout/fragment_f_r__trang_nguoi_dung.xml
@@ -1,8 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".FR_TrangNguoiDung">
 
-</FrameLayout>
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_avt_nguoidung"
+        android:layout_width="140dp"
+        android:layout_height="140dp"
+        android:layout_marginTop="60dp"
+        android:layout_centerHorizontal="true"
+        app:cardCornerRadius="70dp">
+
+        <ImageView
+            android:id="@+id/img_avt_nguoidung"
+            android:layout_width="140dp"
+            android:layout_height="140dp"
+            android:layout_centerHorizontal="true"
+            android:background="@color/purple_500"
+            android:scaleType="centerCrop"
+            android:src="@drawable/ic_baseline_person_24"/>
+
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/tv_tennguoidung"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cv_avt_nguoidung"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:text="Tên người dùng"
+        android:textColor="@color/black"
+        android:textSize="25dp"
+        android:textStyle="bold"/>
+
+    <Button
+        android:id="@+id/btn_chinhsua"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_tennguoidung"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/edittext_format"
+        android:backgroundTint="@color/blue_for_button"
+        android:drawableLeft="@drawable/ic_baseline_create_24"
+        android:drawablePadding="20dp"
+        android:padding="5dp"
+        android:text="Chỉnh sửa thông tin"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="15dp" />
+
+    <Button
+        android:id="@+id/btn_dangxuat"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_chinhsua"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/edittext_format"
+        android:backgroundTint="@color/blue_for_button"
+        android:drawableLeft="@drawable/ic_baseline_exit_to_app_24"
+        android:drawablePadding="20dp"
+        android:padding="5dp"
+        android:text="Đăng xuất"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:textSize="15dp" />
+
+    <ImageView
+        android:id="@+id/img_tieude"
+        android:layout_width="match_parent"
+        android:layout_height="130dp"
+        android:background="@drawable/trang_chu_background_light" />
+
+</RelativeLayout>
