--- a/StepTrackerAndroidApp/app/src/main/res/layout/activity_baocao.xml
+++ b/StepTrackerAndroidApp/app/src/main/res/layout/activity_baocao.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/trang_chu_background_light"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -13,35 +12,40 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="50dp"
         android:layout_gravity="center_horizontal">
         <Button
             android:id="@+id/btnNgay"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginRight="10dp"
+            android:backgroundTint="@color/blue_for_button"
             android:height="70dp"
             android:text="Tuần"/>
         <Button
             android:id="@+id/btnThang"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginRight="10dp"
             android:height="70dp"
+            android:backgroundTint="@color/blue_for_button"
             android:text="Tháng"/>
         <Button
             android:id="@+id/btnNam"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="60dp"
             android:layout_marginRight="10dp"
             android:height="70dp"
+            android:backgroundTint="@color/blue_for_button"
             android:text="Năm"/>
 
     </LinearLayout>
+
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/barchart"
+        android:layout_marginTop="30dp"
         android:layout_width="match_parent"
-        android:layout_height="1500px"/>
+        android:layout_height="1500px" />
 
 
 </LinearLayout>
