--- a/StepTrackerAndroidApp/app/src/main/res/layout/fragment_f_r__trang_chu.xml
+++ b/StepTrackerAndroidApp/app/src/main/res/layout/fragment_f_r__trang_chu.xml
@@ -44,24 +44,12 @@
         android:textStyle="bold" />
 
     <Button
-        android:id="@+id/btn_hoantac"
-        android:layout_width="wrap_content"
-        android:layout_height="60dp"
-        android:layout_below="@+id/img_circle_yellow"
-        android:layout_marginLeft="90dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginBottom="10dp"
-        android:backgroundTint="@color/blue_for_button"
-        android:text="Hoàn tác" />
-
-    <Button
         android:id="@+id/btn_luu"
         android:layout_width="wrap_content"
         android:layout_height="60dp"
         android:layout_below="@+id/img_circle_yellow"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
-        android:layout_toRightOf="@+id/btn_hoantac"
         android:backgroundTint="@color/green_for_button"
         android:text="Lưu" />
 
@@ -70,7 +58,7 @@
         android:id="@+id/tv_quangduong"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_hoantac"
+        android:layout_below="@+id/btn_luu"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="10dp"
         android:layout_marginLeft="155dp"
@@ -93,12 +81,12 @@
         android:id="@+id/tv_km"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/btn_hoantac"
+        android:layout_below="@+id/btn_luu"
         android:layout_centerVertical="true"
         android:layout_marginTop="70dp"
         android:layout_toRightOf="@+id/tv_quangduong"
         android:padding="15dp"
-        android:text="(km)"
+        android:text="(m)"
         android:textColor="@color/black"
         android:textSize="15dp" />
 
@@ -106,8 +94,8 @@
         android:id="@+id/img_distance_icon"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_below="@id/btn_hoantac"
-        android:layout_marginLeft="100dp"
+        android:layout_below="@id/btn_luu"
+        android:layout_marginLeft="85dp"
         android:layout_marginTop="70dp"
         android:padding="6dp"
         android:src="@drawable/distance_icon" />
@@ -139,7 +127,7 @@
         android:layout_width="60dp"
         android:layout_height="50dp"
         android:layout_below="@id/img_distance_icon"
-        android:layout_marginLeft="100dp"
+        android:layout_marginLeft="85dp"
         android:padding="6dp"
         android:src="@drawable/kcal_icon" />
 
